syntax = "proto3";

package user.source.response;

import "protos/user/source/common.proto";

option go_package = "./;uspb";

// The response you get for calling Store on user.
message UserStoreResponse {
    uint32                    id         = 1;
    string                    first_name = 2;
    string                    last_name  = 3;
    string                    email      = 4;
    user.source.common.Status status     = 6;
    int64                     created_at = 7;
    int64                     updated_at = 8;
}

// The response you get for calling Find on user.
message UserFindResponse {
    uint32                    id         = 1;
    string                    first_name = 2;
    string                    last_name  = 3;
    string                    email      = 4;
    user.source.common.Status status     = 6;
    int64                     created_at = 7;
    int64                     updated_at = 8;
}

// The response you get for calling Delete on user.
message UserDestroyResponse {
    bool status = 1;
}

// The response you get for calling Update on user.
message UserUpdateResponse {
    bool status = 1;
}
